--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.html
@@ -62,7 +62,7 @@
 				"
 				class="item"
 			>
-				<mat-card class="recording-card">
+				<mat-card appearance="outlined" class="recording-card">
 					<mat-card-content>
 						<div class="video-div-container">
 							<img *ngIf="!!recording.url" [src]="recording.url | thumbnailUrl" />
