--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/login/login.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/login/login.component.html
@@ -9,7 +9,7 @@
 	</div>
 </div>
 
-<mat-card *ngIf="!checkingLogged">
+<mat-card appearance="outlined" *ngIf="!checkingLogged">
 	<mat-card-content>
 		<form ngNativeValidate #loginForm (ngSubmit)="login()">
 			<table class="full-width" cellspacing="0">
