--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/captions/captions.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/captions/captions.component.html
@@ -13,7 +13,7 @@
 		</div>
 
 		<div id="lang-section">
-			<mat-list-item>
+			<mat-list-item class="lang-section-item">
 				<div mat-line>{{ 'PANEL.SETTINGS.LANGUAGE' | translate }}</div>
 				<button mat-flat-button [matMenuTriggerFor]="menu" [disabled]="!isSttReady" class="lang-button">
 					<span>{{ langSelected }}</span>
