--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/nickname-input/nickname-input.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/nickname-input/nickname-input.component.html
@@ -1,8 +1,8 @@
 <div id="nickname-input-container">
-	<button mat-icon-button disabled>
+	<button mat-icon-button disabled id="nickname-button">
 		<mat-icon>person</mat-icon>
 	</button>
-	<mat-form-field appearance="standard">
+	<mat-form-field>
 		<mat-label>{{ 'PREJOIN.NICKNAME' | translate }}</mat-label>
 		<input
 			matInput
