--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -12,7 +12,7 @@
 		{ name: 'Spanish', lang: 'es-ES' },
 		{ name: 'English', lang: 'en-US' }
 	]"
-	[prejoin]="false"
+	[prejoin]="true"
 	[participantName]="'Participant'"
 	[videoMuted]="false"
 	[audioMuted]="false"
@@ -27,8 +27,8 @@
 	[toolbarParticipantsPanelButton]="true"
 	[toolbarDisplayLogo]="true"
 	[toolbarDisplaySessionName]="true"
-	[streamResolution]="'160x120'"
-	[streamFrameRate]="2"
+	[streamResolution]="'640x480'"
+	[streamFrameRate]="25"
 	[streamDisplayParticipantName]="true"
 	[streamDisplayAudioDetection]="true"
 	[streamSettingsButton]="true"
