--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/settings-panel/settings-panel.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/settings-panel/settings-panel.component.css
@@ -1,6 +1,14 @@
+#settings-container {
+	display: flex;
+}
+
 .settings-container {
 	display: flex;
 	padding: 10px;
+	flex: 1;
+	width: auto;
+	justify-content: space-between;
+	align-items: stretch;
 }
 
 .item-menu {
@@ -18,18 +26,29 @@
 	width: min-content;
 }
 
-.option {
-	border-radius: var(--ov-panel-radius);
-}
 .lang-container button {
 	width: 100%;
 }
 
+/* .option {
+	border-radius: var(--ov-panel-radius);
+} */
 mat-list-option[aria-selected='true'] {
-	background: var(--ov-tertiary-color);
-	font-weight: bold !important;
-	color: var(--ov-panel-background);
+	background: var(--ov-tertiary-color) !important;
+	border-radius: var(--ov-panel-radius);
 }
-::ng-deep .mat-list-item-content {
-	padding: 5px !important;
+
+::ng-deep mat-list-option[aria-selected='true'] .mat-mdc-list-item-unscoped-content, ::ng-deep mat-list-option[aria-selected='true']  mat-icon {
+	color: var(--ov-panel-background) !important;
+}
+
+mat-list-option[aria-selected='false'] mat-icon {
+	color: var(--ov-panel-text-color) !important;
+}
+
+::ng-deep .mdc-list-item--with-leading-icon .mdc-list-item__start {
+	margin-right: 15px !important;
+}
+.mat-mdc-list-base {
+	--mdc-list-list-item-focus-state-layer-color: transparent !important;
 }
