--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.css
@@ -85,22 +85,26 @@
 	}
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version. */
 ::ng-deep .mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
 	padding: 1px !important;
 }
 
-::ng-deep .mat-input-element {
+::ng-deep .mat-mdc-input-element {
 	caret-color: #000000;
 }
-::ng-deep .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
+/* TODO(mdc-migration): The following rule targets internal classes of option that may no longer apply for the MDC version. */
+::ng-deep .mat-primary .mat-mdc-option.mat-selected:not(.mat-option-disabled) {
 	color: #000000;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
 ::ng-deep .mat-form-field-label {
 	color: var(--ov-panel-text-color) !important;
 }
 
-::ng-deep .mat-form-field.mat-focused .mat-form-field-ripple {
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+::ng-deep .mat-mdc-form-field.mat-focused .mat-form-field-ripple {
 	background-color: var(--ov-panel-text-color) !important;
 }
 
