--- a/openvidu-components-angular/src/styles.scss
+++ b/openvidu-components-angular/src/styles.scss
@@ -1,109 +1,94 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-@import '@angular/material/theming';
-
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
-//  The following line adds:
-//    1. Default typography styles for all components
-//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
-//  If you specify typography styles for the components you use elsewhere, you should delete this line.
-//  If you don't need the default component typographies but still want the hierarchy styles,
-//  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy(mat.define-typography-config());`
-@include mat.all-component-typographies();
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$openvidu-components-primary: mat-palette($mat-blue-grey, 500, 300);
-$openvidu-components-accent: mat-palette($mat-amber, 500, 700, A100);
-
-// The warn palette is optional (defaults to red).
+// Define your custom palettes
+$openvidu-components-primary: mat.define-palette(mat.$blue-grey-palette, 500, 300);
+$openvidu-components-accent: mat.define-palette(mat.$amber-palette, 500, 700, A100);
 $openvidu-components-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$openvidu-components-theme: mat.define-light-theme((
-  color: (
-    primary: $openvidu-components-primary,
-    accent: $openvidu-components-accent,
-    warn: $openvidu-components-warn,
-  )
-));
+// Define the theme
+$openvidu-components-theme: mat.define-light-theme(
+	(
+		color: (
+			primary: $openvidu-components-primary,
+			accent: $openvidu-components-accent,
+			warn: $openvidu-components-warn
+		)
+	)
+);
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
+// Include the non-legacy themes for the components
 @include mat.all-component-themes($openvidu-components-theme);
 
+// If you have custom typography configurations, include them as well
+@include mat.all-component-typographies($openvidu-components-theme);
+
+// If you need to adjust density, include it as well
+// @include mat.all-component-density-styles($openvidu-components-theme);
 
 // Custom openvidu-components styles
 :root {
-  --ov-primary-color: #303030;
-  --ov-secondary-color: #3e3f3f;
-  --ov-tertiary-color: #598eff;
-  --ov-warn-color: #EB5144;
-  --ov-accent-color: #ffae35;
-  --ov-light-color: #e6e6e6;
+	--ov-primary-color: #303030;
+	--ov-secondary-color: #3e3f3f;
+	--ov-tertiary-color: #598eff;
+	--ov-warn-color: #eb5144;
+	--ov-accent-color: #ffae35;
+	--ov-light-color: #e6e6e6;
 
-  --ov-logo-background-color: #3a3d3d;
-  --ov-text-color: #ffffff;
+	--ov-logo-background-color: #3a3d3d;
+	--ov-text-color: #ffffff;
 
-  --ov-panel-text-color: #1d1d1d;
-  --ov-panel-background: #ffffff;
+	--ov-panel-text-color: #1d1d1d;
+	--ov-panel-background: #ffffff;
 
-  --ov-buttons-radius: 50%;
-  --ov-leave-button-radius: 10px;
-  --ov-video-radius: 5px;
-  --ov-panel-radius: 5px;
+	--ov-buttons-radius: 50%;
+	--ov-leave-button-radius: 10px;
+	--ov-video-radius: 5px;
+	--ov-panel-radius: 5px;
 }
-
-
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; overflow: hidden;}
-body { margin: 0; font-family: 'Roboto','RobotoDraft',Helvetica,Arial,sans-serif;}
-
+html,
+body {
+	height: 100%;
+	overflow: hidden;
+}
+body {
+	margin: 0;
+	font-family: 'Roboto', 'RobotoDraft', Helvetica, Arial, sans-serif;
+}
 
 .spacer {
-  flex: 1;
+	flex: 1;
 }
 .toolbar img {
-  margin: 0 16px;
+	margin: 0 16px;
 }
 
 .toolbar #twitter-logo {
-  height: 40px;
-  margin: 0 16px;
+	height: 40px;
+	margin: 0 16px;
 }
 
 .toolbar #twitter-logo:hover {
-  opacity: 0.8;
+	opacity: 0.8;
 }
 
 .back-button {
-  margin-top: 8px;
-  display: flex;
-  align-items: center;
-  line-height: 20px;
-  padding: 10px;
+	margin-top: 8px;
+	display: flex;
+	align-items: center;
+	line-height: 20px;
+	padding: 10px;
 	position: absolute;
 	top: 70px;
-  svg {
-    transform: rotate(180deg);
-  }
+	svg {
+		transform: rotate(180deg);
+	}
 }
 
 .back-button a {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
