ov-components: Fixed  recording panel elements

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.css
@@ -96,6 +96,12 @@
 	margin-bottom: 20px;
 }
 
+#recording-action-buttons {
+	position: absolute;
+	bottom: 10px;
+	right: 0;
+}
+
 #start-recording-btn {
 	width: 100%;
 	background-color: var(--ov-tertiary-color);
