--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.html
@@ -1,3 +1,8 @@
+<div id="spinner" *ngIf="preparing" >
+	<mat-spinner [diameter]="50"></mat-spinner>
+	<span>{{ 'PREJOIN.PREPARING' | translate }}</span>
+</div>
+
 <div id="session-container" *ngIf="!preparing" @sessionAnimation>
 	<mat-sidenav-container #container #videoContainer class="sidenav-container">
 		<mat-sidenav
